--- a/package.json
+++ b/package.json
@@ -22,6 +22,6 @@
   },
   "homepage": "https://github.com/SocketCluster/sc-redis",
   "dependencies": {
-    "redis": "2.4.x"
+    "redis": "^2.6.x"
   }
 }
